--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/module-alias": "^2.0.4",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
+    "antd": "^5.18.1",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -70,6 +71,7 @@
     "react-router-dom": "^6.23.1",
     "sass": "^1.77.5",
     "styled-components": "^6.1.11",
-    "typescript-eslint": "^7.13.0"
+    "typescript-eslint": "^7.13.0",
+    "use-sound": "^4.0.1"
   }
 }
